--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -9,5 +9,13 @@
   "tiles_loadGeoPackageAsOverlay": "Load geopackage tiles as overlay image as opposed to tile layer (best for gdal generated data and different projections).",
   "tiles_colorToHide": "Color to hide",
   "wms_wmsProperties": "WMS Properties",
-  "wms_opacity": "Opacity"
+  "wms_opacity": "Opacity",
+  "gpx_gpxProperties": "GPX Properties",
+  "gpx_wayPoints": "Waypoints",
+  "gpx_color": "Color",
+  "gpx_size": "Size",
+  "gpx_viewLabelsIfAvailable": "View labels if available",
+  "gpx_tracksRoutes": "Tracks/Routes",
+  "gpx_width": "Width",
+  "gpx_palette": "Palette"
 }
