--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -17,5 +17,9 @@
   "gpx_viewLabelsIfAvailable": "View labels if available",
   "gpx_tracksRoutes": "Tracks/Routes",
   "gpx_width": "Width",
-  "gpx_palette": "Palette"
+  "gpx_palette": "Palette",
+  "geoImage_opacity": "Opacity",
+  "geoImage_tiffProperties": "Tiff Properties",
+  "geoImage_colorToHide": "Color to hide"
+
 }
