move gss commons from import/export into libs to make it core part

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -36,6 +36,35 @@
   "featureAttributesViewer_loadingData": "Loading data...",
   "featureAttributesViewer_setNewValue": "Set new value.",
   "featureAttributesViewer_field": "FIELD",
-  "featureAttributesViewer_value": "VALUE"
-
+  "featureAttributesViewer_value": "VALUE",
+  "network_cancelledByUser": "Cancelled by user.",
+  "@network_cancelledByUser": {},
+  "network_completed": "Completed.",
+  "@network_completed": {},
+  "network_uploading": "Uploading…",
+  "@network_uploading": {},
+  "network_pleaseWait": "please wait…",
+  "@network_pleaseWait": {},
+  "network_permissionOnServerDenied": "Permission on server denied.",
+  "@network_permissionOnServerDenied": {},
+  "network_couldNotConnectToServer": "Could not connect to the server. Is it online? Check your address.",
+  "@network_couldNotConnectToServer": {},
+  "settings_pleaseEnterValidPassword": "Please enter a valid server password.",
+  "@settings_pleaseEnterValidPassword": {},
+  "settings_gss": "GSS",
+  "@settings_gss": {},
+  "settings_geopaparazziSurveyServer": "Geopaparazzi Survey Server",
+  "@settings_geopaparazziSurveyServer": {},
+  "settings_serverUrl": "Server URL",
+  "@settings_serverUrl": {},
+  "settings_serverUrlStartWithHttp": "The server URL needs to start with HTTP or HTTPS.",
+  "@settings_serverUrlStartWithHttp": {},
+  "settings_serverPassword": "Server Password",
+  "@settings_serverPassword": {},
+  "settings_allowSelfSignedCert": "Allow self signed certificates",
+  "@settings_allowSelfSignedCert": {},
+  "settings_serverUsername": "Server Username",
+  "@settings_serverUsername": {},
+  "settings_pleaseEnterValidUsername": "Please enter a valid server username.",
+  "@settings_pleaseEnterValidUsername": {}
 }
