--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,5 +66,27 @@
   "settings_serverUsername": "Server Username",
   "@settings_serverUsername": {},
   "settings_pleaseEnterValidUsername": "Please enter a valid server username.",
-  "@settings_pleaseEnterValidUsername": {}
+  "@settings_pleaseEnterValidUsername": {},
+  "form_sketch_newSketch": "New Sketch",
+  "@form_sketch_newSketch": {},
+  "form_sketch_undo": "Undo",
+  "@form_sketch_undo": {},
+  "form_sketch_noUndo": "Nothing to undo",
+  "@form_sketch_noUndo": {},
+  "form_sketch_clear": "Clear",
+  "@form_sketch_clear": {},
+  "form_sketch_save": "Save",
+  "@form_sketch_save": {},
+  "form_sketch_sketcher": "Sketcher",
+  "@form_sketch_sketcher": {},
+  "form_sketch_enableDrawing": "Turn on drawing",
+  "@form_sketch_enableDrawing": {},
+  "form_sketch_enableEraser": "Turn on eraser",
+  "@form_sketch_enableEraser": {},
+  "form_sketch_backColor": "Background color",
+  "@form_sketch_backColor": {},
+  "form_sketch_strokeColor": "Stroke color",
+  "@form_sketch_strokeColor": {},
+  "form_sketch_pickColor": "Pick color",
+  "@form_sketch_pickColor": {}
 }
