working on widget configd

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -93,10 +93,28 @@
   "@cancel": {},
   "ok": "OK",
   "@ok": {},
-  "set_as_Label": "set as label",
+  "set_as_Label": "use as map label",
   "@set_as_Label": {},
+  "set_label": "set label",
+  "@set_label": {},
+  "set_cliccable_url": "set tappable URL",
+  "@set_cliccable_url": {},
+  "set_unique_key_for_formitem":  "set unique key for the form item",
+  "@set_unique_key_for_formitem": {},
   "set_as_mandatory": "set mandatory",
   "@set_as_mandatory": {},
   "configure_widget": "Configure Widget",
-  "@configure_widget": {}
+  "@configure_widget": {},
+  "key_cannot_be_empty": "The key cannot be empty",
+  "@key_cannot_be_empty": {},
+  "key_cannot_specialchars": "The key cannot contain spaces or special characters",
+  "@key_cannot_specialchars": {},
+  "key_already_exists_in": "The key already exists in",
+  "@key_already_exists_in": {},
+  "underline_label": "underline label",
+  "@underline_label": {},
+  "not_a_valid_number": "The inserted value is not a valid number",
+  "@not_a_valid_number": {},
+  "set_font_size": "set the font size",
+  "@set_font_size": {}
 }
