update trans labels

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -122,5 +122,27 @@
   "insert_one_item_per_line": "Insert one item per line. If divided by colon, the first part is the label and the second the value.",
   "@insert_one_item_per_line": {},
   "set_font_size": "set the font size",
-  "@set_font_size": {}
+  "@set_font_size": {},
+  "remove": "Remove",
+  "@remove": {},
+  "edit": "Edit",
+  "@edit": {},
+  "select_widgets": "Select Widgets",
+  "@select_widgets": {},
+  "add_new_widget": "Add a new widget",
+  "@add_new_widget": {},
+  "form_widgets": "Form widgets",
+  "@form_widgets": {},
+  "new_form_name": "New form name",
+  "@new_form_name": {},
+  "enter_unique_form_name": "Enter a unique name for the form",
+  "@enter_unique_form_name": {},
+  "please_enter_name": "Please enter a name",
+  "@please_enter_name": {},
+  "name_already_exists": "The name already exists",
+  "@name_already_exists": {},
+  "form_tabs": "Form tabs",
+  "@form_tabs": {},
+  "add_new_form_tab": "Add a new form tab",
+  "@add_new_form_tab": {}
 }
