--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -168,5 +168,23 @@
   "formbuilder_action_rename_dialog_title": "RENAME FORM",
   "@formbuilder_action_rename_dialog_title": {},
   "formbuilder_action_rename_error_empty": "A form with that name already exists.",
-  "@formbuilder_action_rename_error_empty": {}
+  "@formbuilder_action_rename_error_empty": {},
+  "gss_settings": "Geopaparazzi Survey Server Settings",
+  "gss_settings_connection": "GSS Connection Settings",
+  "gss_settings_server_url": "Server URL",
+  "gss_settings_server_url_start_http": "Server url needs to start with http or https.",
+  "gss_settings_project": "GSS Project",
+  "gss_settings_server_username": "Server Username",
+  "gss_settings_server_username_valid": "Please enter a valid server username.",
+  "gss_settings_password": "Server Password",
+  "gss_settings_password_valid": "Please enter a valid server password.",
+  "gss_settings_certificates_self": "Allow self signed certificates",
+  "gss_settings_upload_position": "Upload device position to server in regular time intervals.",
+  "gss_settings_data_missing": "User, password, url and project are necessary to login",
+  "gss_settings_login": "Login",
+  "gss_settings_no_token": "No token available, please login.",
+  "gss_settings_no_gss_urls_archive": "No saved GSS URLs available.",
+  "gss_settings_select_gss_url": "Select GSS URL",
+  "gss_settings_token_in_store": "Token is in store.",
+  "gss_settings_unable_selfsigned_certificates": "Unable to connect to ssl with self signed certificate. Allow self signed certificates in the settings."
 }
