add delete trans

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -169,6 +169,12 @@
   "@formbuilder_action_rename_dialog_title": {},
   "formbuilder_action_rename_error_empty": "A form with that name already exists.",
   "@formbuilder_action_rename_error_empty": {},
+  "formbuilder_action_delete_tooltip": "Delete the form.",
+  "@formbuilder_action_delete_tooltip": {},
+  "formbuilder_action_delete_dialog_title": "DELETE FORM",
+  "@formbuilder_action_delete_dialog_title": {},
+  "formbuilder_action_delete_dialog_prompt": "Are you sure you want to delete the form?",
+  "@formbuilder_action_delete_dialog_prompt": {},
   "gss_settings": "Geopaparazzi Survey Server Settings",
   "gss_settings_connection": "GSS Connection Settings",
   "gss_settings_server_url": "Server URL",
