fix form labels + remove icons from default forms + add rename form action

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -163,6 +163,12 @@
   "@formbuilder_action_create_new_error_spaces": {},
   "formbuilder_action_save_tooltip": "Save the form in the forms folder.",
   "@formbuilder_action_save_tooltip": {},
+  "formbuilder_action_saved_msg": "Form saved.",
+  "@formbuilder_action_saved_msg": {},
+  "formbuilder_action_duplicated_msg": "Form duplicated.",
+  "@formbuilder_action_duplicated_msg": {},
+  "formbuilder_action_created_msg": "Form created.",
+  "@formbuilder_action_created_msg": {},
   "formbuilder_action_rename_tooltip": "Rename the form.",
   "@formbuilder_action_rename_tooltip": {},
   "formbuilder_action_rename_dialog_title": "RENAME FORM",
