--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -198,5 +198,9 @@
   "gss_settings_no_gss_urls_archive": "No saved GSS URLs available.",
   "gss_settings_select_gss_url": "Select GSS URL",
   "gss_settings_token_in_store": "Token is in store.",
-  "gss_settings_unable_selfsigned_certificates": "Unable to connect to ssl with self signed certificate. Allow self signed certificates in the settings."
+  "gss_settings_unable_selfsigned_certificates": "Unable to connect to ssl with self signed certificate. Allow self signed certificates in the settings.",
+  "gss_download_all": "Download all",
+  "gss_download_only_user": "Download only user data",
+  "gss_download_nothing": "Don't download data",
+  "gss_download_select_layer": "Select GSS layers to download"
 }
