bring back fences

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -206,5 +206,37 @@
   "gss_download_nothing": "Don't download data",
   "gss_download_select_layer": "Select GSS layers to download",
   "mapsforge_theme": "Mapsforge theme",
-  "mapsforge_select_tiles_theme": "Select a tiles theme"
+  "mapsforge_select_tiles_theme": "Select a tiles theme",
+  "fence_fenceProperties": "Fence Properties",
+  "@fence_fenceProperties": {},
+  "fence_delete": "Delete",
+  "@fence_delete": {},
+  "fence_removeFence": "Remove fence",
+  "@fence_removeFence": {},
+  "fence_areYouSureRemoveFence": "Remove the fence?",
+  "@fence_areYouSureRemoveFence": {},
+  "fence_cancel": "Cancel",
+  "@fence_cancel": {},
+  "fence_ok": "OK",
+  "@fence_ok": {},
+  "fence_aNewFence": "a new fence",
+  "@fence_aNewFence": {},
+  "fence_label": "Label",
+  "@fence_label": {},
+  "fence_aNameForFence": "A name for the fence.",
+  "@fence_aNameForFence": {},
+  "fence_theNameNeedsToBeDefined": "The name must be defined.",
+  "@fence_theNameNeedsToBeDefined": {},
+  "fence_radius": "Radius",
+  "@fence_radius": {},
+  "fence_theFenceRadiusMeters": "The fence radius in meters.",
+  "@fence_theFenceRadiusMeters": {},
+  "fence_radiusNeedsToBePositive": "The radius must be a positive number in meters.",
+  "@fence_radiusNeedsToBePositive": {},
+  "fence_onEnter": "On enter",
+  "@fence_onEnter": {},
+  "fence_onExit": "On exit",
+  "@fence_onExit": {},
+  "toolbarTools_toggleFenceMapCenter": "Toggle fence in map center.",
+  "@toolbarTools_toggleFenceMapCenter": {}
 }
